--- a/Documents/Design/Software/Frontend-Devices.tex
+++ b/Documents/Design/Software/Frontend-Devices.tex
@@ -35,7 +35,8 @@ The data will be sent to the Device Management back end module through the REST 
 \subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
-%  on ways to work around them. Elaborate on why the problem
+%  on ways to work around them.
+Elaborate on why the problem
 %  exists
 
 \subsubsection{Sub-modules 1}
