--- a/Documents/Design/Software/Frontend-Satellite.tex
+++ b/Documents/Design/Software/Frontend-Satellite.tex
@@ -29,7 +29,8 @@ The wizard walks the user through instructions
 \subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
-%  on ways to work around them. Elaborate on why the problem
+%  on ways to work around them.
+Elaborate on why the problem
 %  exists
 
 \subsubsection{Sub-modules 1}
