--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -30,7 +30,8 @@ It will
 \subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
-%  on ways to work around them. Elaborate on why the problem
+%  on ways to work around them.
+Elaborate on why the problem
 %  exists
 
 \subsubsection{Sub-modules 1}
