--- a/Documents/Design/Software/overview.tex
+++ b/Documents/Design/Software/overview.tex
@@ -5,7 +5,8 @@
 
 \section{Description}
 
-The POWER project uses various pieces of software to control the Satellites, provide an API for displays, and generate pages for the primary display. The POWER project will consist of the following pieces of software:
+The POWER project uses various pieces of software to control the Satellites, provide an API for displays, and generate pages for the primary display.
+The POWER project will consist of the following pieces of software:
 \begin{itemize}
  \item The microprocessor code
  \item The server code to communicate with the Satellites
@@ -17,21 +18,34 @@ The microprocessor code is documented in the hardware section because it is very
 
 \subsection{The Display Backend}
 
-The general plan for the backend is to write modules for a Django web application. These modules will either be running in the background and reporting the data given to the server from the Satellites to the database through the REST API functions, or responding to user requests sent through the REST API.
+The general plan for the backend is to write modules for a Django web application.
+These modules will either be running in the background and reporting the data given to the server from the Satellites to the database through the REST API functions, or responding to user requests sent through the REST API.
 
-The logic for using Django as the base, and write modules around Django, is one of necessity. We do not have enough time or manpower to make everything we need from scratch. Therefore, we will be using several open source utilities to assist us. 
+The logic for using Django as the base, and write modules around Django, is one of necessity.
+We do not have enough time or manpower to make everything we need from scratch.
+Therefore, we will be using several open source utilities to assist us.
 
-Django will give us an easy-to-use database interface. It will deal with sanitizing all SQL queries, and make sure all output is escaped (ie, no XSS). Using Django gives us almost all of the security benefits listed in our non-functional requirements.
 
-To make our REST API, we will utilize an open-source Django library called tastypie. Tastypie gives us both model resources (that is, api elements that are basically the database tables) and the ability to create custom resources that may, or may not, map to the database. The one (that's right, one) instance where we may not want to directly map something to the database is when we are looking at turning the outlets on and off.
+Django will give us an easy-to-use database interface.
+It will deal with sanitizing all SQL queries, and make sure all output is escaped (ie, no XSS).
+Using Django gives us almost all of the security benefits listed in our non-functional requirements.
 
-Another advantage of Django is that is comes with a very extensive, expandable, and adaptable authentication system. This will help accomplish several optional and required features almost instantly. 
+To make our REST API, we will utilize an open-source Django library called tastypie.
+Tastypie gives us both model resources (that is, api elements that are basically the database tables) and the ability to create custom resources that may, or may not, map to the database.
+The one (that's right, one) instance where we may not want to directly map something to the database is when we are looking at turning the outlets on and off.
+
+Another advantage of Django is that is comes with a very extensive, expandable, and adaptable authentication system.
+This will help accomplish several optional and required features almost instantly.
+
 
 \subsection{The Display Frontend}
 
-The general plan for the frontend is to serve up some fairly static pages, and use extensive amounts of Javascript to fill in the content and animate things. The frontend will communicate with the backend through the REST API. This will be fairly simply, since the backend API will support multiple formats, including JSON.
+The general plan for the frontend is to serve up some fairly static pages, and use extensive amounts of Javascript to fill in the content and animate things.
+The frontend will communicate with the backend through the REST API.
+This will be fairly simply, since the backend API will support multiple formats, including JSON.
 
-To assist us on the frontend, we will be using several open source libraries. They will all serve a very clear function.
+To assist us on the frontend, we will be using several open source libraries.
+They will all serve a very clear function.
 
 \begin{itemize}
  \item Backbone.js - A library to provide basic functions dealing with fetching and syncing data with the server
@@ -39,8 +53,10 @@ To assist us on the frontend, we will be using several open source libraries. Th
   \item Backbone.js will deal with tracking the "model" portion of our Javascript code.
   \item Backbone.js will be made compatible with our REST API by using a small extension called backbone-tastypie
  \end{itemize}
- \item iCanHaz - A library that provides advanced templating functionality. This is client-side templating, and relies on several "fake" HTML tags
- \item RequireJS - A library that deal with tracking and loading assets asynchronously. This includes loading libraries that we will be using
+ \item iCanHaz - A library that provides advanced templating functionality.
+This is client-side templating, and relies on several "fake" HTML tags
+ \item RequireJS - A library that deal with tracking and loading assets asynchronously.
+This includes loading libraries that we will be using
  \item jQuery - jQuery will be used for both parts of the front end and for the ajax support
  \begin{itemize}
   \item We will use jqplot for dealing with graphs
@@ -50,17 +66,26 @@ To assist us on the frontend, we will be using several open source libraries. Th
 
 \section{Program Flow}
 
-This program will have three main "threads". One thread would be responsible for listening to messages from the Satellites, and another would be responsible for listening and responding to requests on the API. The last thread would be responsible for serving up static files for the main display.
+This program will have three main "threads".
+One thread would be responsible for listening to messages from the Satellites, and another would be responsible for listening and responding to requests on the API.
+The last thread would be responsible for serving up static files for the main display.
 
-The Satellite thread will be responsible for taking the logging information provided by the Satellites and storing it in the database. Each Satellite will report it's information to the server once every second. Therefore, all this thread needs to do is react to incoming connections.
+The Satellite thread will be responsible for taking the logging information provided by the Satellites and storing it in the database.
+Each Satellite will report it's information to the server once every second.
+Therefore, all this thread needs to do is react to incoming connections.
 
-The API thread would provide the Representation State Transfer API (REST) that will be used by all future displays to get data in a standardized, well defined way. This thread will NOT be serving up images or page templates. This is done to make best use of the caching functionality included in the HTTP server software that will be used.
+The API thread would provide the Representation State Transfer API (REST) that will be used by all future displays to get data in a standardized, well defined way.
+This thread will NOT be serving up images or page templates.
+This is done to make best use of the caching functionality included in the HTTP server software that will be used.
 
-The last thread will be running a "dumb" web page that servers up static HTML and Javascript files. This thread will also retrieve images and CSS files from the server.
+The last thread will be running a "dumb" web page that servers up static HTML and Javascript files.
+This thread will also retrieve images and CSS files from the server.
 
 \section{Data Flow}
 
-This application will use a SQL database to store all data. Each module will interact with the REST API, which interacts with the database as needed. The diagram for this database is broken down in the "Sub-modules" section, with a diagram for each logical grouping of tables.
+This application will use a SQL database to store all data.
+Each module will interact with the REST API, which interacts with the database as needed.
+The diagram for this database is broken down in the "Sub-modules" section, with a diagram for each logical grouping of tables.
 
 \begin{figure}[H]
 \centering
@@ -69,7 +94,10 @@ This application will use a SQL database to store all data. Each module will int
 \label{img:S_DataFlowDiagram}
 \end{figure}
 
-Figure \ref{img:S_DataFlowDiagram} shows how various components will be interacting. Notice that the database is not directly accessed by any components, but goes through the REST API instead. This allows us to provide a standard interface should be more-or-less accessible from any programming language or system. This will also allow us to use some well-known security features, such as TLS.
+Figure \ref{img:S_DataFlowDiagram} shows how various components will be interacting.
+Notice that the database is not directly accessed by any components, but goes through the REST API instead.
+This allows us to provide a standard interface should be more-or-less accessible from any programming language or system.
+This will also allow us to use some well-known security features, such as TLS.
 
 \section{UML Diagrams}
 
@@ -82,15 +110,27 @@ Figure \ref{img:S_DataFlowDiagram} shows how various components will be interact
 \label{img:S_PackageListing}
 \end{figure}
 
-Figure \ref{img:S_PackageListing} contains all the Django modules that will be created inside the actual Django "website" itself. This is basically the folder hierarchy of our web application source code. The "power" folder consists of folders for each module (not including the various open-source modules we are using, since those are being controlled via PIP). Each of these contains models.py file, which specifies what the database for that module should look like, a \_\_init\_\_.py file which will register the module with the REST API, and whatever other files that module needs. 
+Figure \ref{img:S_PackageListing} contains all the Django modules that will be created inside the actual Django "website" itself.
+This is basically the folder hierarchy of our web application source code.
+The "power" folder consists of folders for each module (not including the various open-source modules we are using, since those are being controlled via PIP).
+Each of these contains models.py file, which specifies what the database for that module should look like, a \_\_init\_\_.py file which will register the module with the REST API, and whatever other files that module needs.
+
 
 \section{Potential Problems}
 
-Using open-source libraries requires us to learn them. This is a big problem because of the time constraints on this project, and will require us to spend almost as much time learning as we will be in development (possibly more). This can lead to frustration, especially in light of the fact that we will need to learn the languages in addition to the libraries.
+Using open-source libraries requires us to learn them.
+This is a big problem because of the time constraints on this project, and will require us to spend almost as much time learning as we will be in development (possibly more).
+This can lead to frustration, especially in light of the fact that we will need to learn the languages in addition to the libraries.
 
-However, using well developed and designed libraries allows us to skip over a good part of the development and planning. We will be able to use extensive API's without taking responsibility for maintaining the software. This will allow us to focus on our product instead of the all the small things that make it up. 
+However, using well developed and designed libraries allows us to skip over a good part of the development and planning.
+We will be able to use extensive API's without taking responsibility for maintaining the software.
+This will allow us to focus on our product instead of the all the small things that make it up.
 
-Another potential problem with using the suggested architecture will be clients that don't like using Javascript in their browser. Using heavy javascript allows us to offset a good bit of the load from our low-powered server to the clients computers, which will have a good deal more power. If we wanted to support clients that don't like using javascript (ie, security nuts), we would be looking at adding a significant load to our server (text-processing can consume a good bit of resources, especially string manipulation). Although we may be able to do, for the first version we will simply add "Javascript support" as a requirement for the clients.
+
+Another potential problem with using the suggested architecture will be clients that don't like using Javascript in their browser.
+Using heavy javascript allows us to offset a good bit of the load from our low-powered server to the clients computers, which will have a good deal more power.
+If we wanted to support clients that don't like using javascript (ie, security nuts), we would be looking at adding a significant load to our server (text-processing can consume a good bit of resources, especially string manipulation).
+Although we may be able to do, for the first version we will simply add "Javascript support" as a requirement for the clients.
 
 \section{The Backend}
 
