--- a/Documents/Design/Software/template.tex
+++ b/Documents/Design/Software/template.tex
@@ -5,7 +5,8 @@
 
 \section{Description}
 
-% Insert a description of the module here. This should include:
+% Insert a description of the module here.
+This should include:
 %  * The module's purpose
 %  * Why the module is done this way
 
@@ -27,7 +28,8 @@
 \section{Potential Problems}
 
 % A list of potentional programs along with suggestions
-%  on ways to work around them. Elaborate on why the problem
+%  on ways to work around them.
+Elaborate on why the problem
 %  exists
 
 \section{Sub-modules 1}
