--- a/Documents/Design/Software/Frontend-Authentication.tex
+++ b/Documents/Design/Software/Frontend-Authentication.tex
@@ -7,7 +7,9 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to manage user and groups.
 
-The authentication front end will consist of both the "login" page, and the user management pages. These pages either post directly to the server using standard form-submission methods (ie, not Ajax) or by using AJAX (if we have time to recreate the entire management system). 
+The authentication front end will consist of both the "login" page, and the user management pages.
+These pages either post directly to the server using standard form-submission methods (ie, not Ajax) or by using AJAX (if we have time to recreate the entire management system).
+
 
 \subsubsection{Program Flow}
 
@@ -19,12 +21,20 @@ The user will first be presented with a login screen, which will take two pieces
 
 After these two pieces of information have been verified (ie, that password belongs to that user), the user will be logged in.
 
-From here, the user has all kinds of options. The only ones that are interesting to this module is the settings panel, which includes a link to the user administration panel. The user administration panel will, initially, be a themed Django-admin view. Time permitting, this may be recreated to be a AJAX type interface.
+From here, the user has all kinds of options.
+The only ones that are interesting to this module is the settings panel, which includes a link to the user administration panel.
+The user administration panel will, initially, be a themed Django-admin view.
+Time permitting, this may be recreated to be a AJAX type interface.
 
 \subsubsection{Data Flow}
 
-All data will be sent to the server through POST requests, not through the REST API. This will allow us to skip over this module almost entirely. This is not consistent with everything else, and will need to be remade later on if there is time.
+All data will be sent to the server through POST requests, not through the REST API.
+This will allow us to skip over this module almost entirely.
+This is not consistent with everything else, and will need to be remade later on if there is time.
 
 \subsubsection{Potential Problems}
 
-Themeing the admin interface to match our site will be tricky. At best, it will involve telling Django to include some extra stylesheets or using a different template. At worst, it will involve modifying the Django stylesheets directly. Either option works, but due to version control it would greatly preferred to be able to tell Django what styles to use.
+Themeing the admin interface to match our site will be tricky.
+At best, it will involve telling Django to include some extra stylesheets or using a different template.
+At worst, it will involve modifying the Django stylesheets directly.
+Either option works, but due to version control it would greatly preferred to be able to tell Django what styles to use.
