--- a/Documents/Design/Software/Frontend-FactoryReset.tex
+++ b/Documents/Design/Software/Frontend-FactoryReset.tex
@@ -25,7 +25,8 @@ This module describes the architecture of how the frontend will create pages tha
 \subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
-%  on ways to work around them. Elaborate on why the problem
+%  on ways to work around them.
+Elaborate on why the problem
 %  exists
 
 \subsubsection{Sub-modules 1}
