The script to put newlines after each period broke some of the comments. I'm fixing these before adding anything.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@129 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Satellite.tex
+++ b/Documents/Design/Software/Backend-Satellite.tex
@@ -33,8 +33,7 @@ returning the requested data or a confirmation of modification to the front end 
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
-Elaborate on why the problem
-%  exists
+% Elaborate on why the problem exists
 
 \subsubsection{Sub-modules 1}
 
