--- a/Documents/Design/Software/Frontend-Devices.tex
+++ b/Documents/Design/Software/Frontend-Devices.tex
@@ -36,8 +36,7 @@ The data will be sent to the Device Management back end module through the REST 
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
-Elaborate on why the problem
-%  exists
+%  Elaborate on why the problem exists
 
 \subsubsection{Sub-modules 1}
 
