--- a/Documents/Design/Software/Frontend-Satellite.tex
+++ b/Documents/Design/Software/Frontend-Satellite.tex
@@ -30,8 +30,7 @@ The wizard walks the user through instructions
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
-Elaborate on why the problem
-%  exists
+% Elaborate on why the problem exists
 
 \subsubsection{Sub-modules 1}
 
