--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -31,8 +31,7 @@ It will
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
-Elaborate on why the problem
-%  exists
+% Elaborate on why the problem exists
 
 \subsubsection{Sub-modules 1}
 
