Another small installation of information in these sections.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@130 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Devices.tex
+++ b/Documents/Design/Software/Backend-Devices.tex
@@ -8,7 +8,8 @@
 This module describes the architecture of how the back end will manage features related to Device Management.
 
 The Device Management back end will be in charge of maintaining the database with information pertaining to the Devices. 
-
+The back end will also generate the framework for the web pages. 
+It will send the basic format of the Device Management page to the front end to be filled in with additional formatting.
  
 
 \subsubsection{Program Flow}
@@ -33,18 +34,18 @@ returning the requested data or a confirmation of modification to the front end 
 % Describe where data goes and comes from in this subsubsection
 % Flow charts are encouraged
 
-\subsubsection{UML Diagrams}
+%\subsubsection{UML Diagrams}
 
 % Any diagrams that can describe the system design
 %  Such as inheritance and actors
 
-\subsubsection{Potential Problems}
+%\subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
 % Elaborate on why the problem exists
 
-\subsubsection{Sub-modules 1}
+%\subsubsection{Sub-modules 1}
 
 % This is a second subsubsection of modules,
 %  and should consists of this module broken 
