--- a/Documents/Design/Software/Frontend-Devices.tex
+++ b/Documents/Design/Software/Frontend-Devices.tex
@@ -27,7 +27,7 @@ The data will be sent to the Device Management back end module through the REST 
 % Describe where data goes and comes from in this subsubsection
 % Flow charts are encouraged
 
-\subsubsection{UML Diagrams}
+%\subsubsection{UML Diagrams}
 
 % Any diagrams that can describe the system design
 %  Such as inheritance and actors
@@ -38,7 +38,7 @@ The data will be sent to the Device Management back end module through the REST 
 %  on ways to work around them.
 %  Elaborate on why the problem exists
 
-\subsubsection{Sub-modules 1}
+%\subsubsection{Sub-modules 1}
 
 % This is a second subsubsection of modules,
 %  and should consists of this module broken 
