--- a/Documents/Design/Software/Backend-Satellite.tex
+++ b/Documents/Design/Software/Backend-Satellite.tex
@@ -7,8 +7,9 @@
 
 This module describes the architecture of how the back end will manage features related to managing Satellites.
 
-The Satellite Management back end is in control of maintaining the information in the database. 
-
+The Satellite Management back end is in control of maintaining the information in the database.  
+It will authenticate the data passed to it by making sure they fit into their respective fields in the database. 
+This module will also pass the basic form of the Satellite Management page to the front end to be filled in by the display.
 
 \subsubsection{Program Flow}
 
@@ -24,7 +25,7 @@ returning the requested data or a confirmation of modification to the front end 
 % Describe where data goes and comes from in this subsubsection
 % Flow charts are encouraged
 
-\subsubsection{UML Diagrams}
+%\subsubsection{UML Diagrams}
 
 % Any diagrams that can describe the system design
 %  Such as inheritance and actors
@@ -35,7 +36,7 @@ returning the requested data or a confirmation of modification to the front end 
 %  on ways to work around them.
 % Elaborate on why the problem exists
 
-\subsubsection{Sub-modules 1}
+%\subsubsection{Sub-modules 1}
 
 % This is a second subsubsection of modules,
 %  and should consists of this module broken 
