--- a/Documents/Design/Software/Frontend-Satellite.tex
+++ b/Documents/Design/Software/Frontend-Satellite.tex
@@ -5,23 +5,28 @@
 
 \subsubsection{Description}
 
-This module describes the architecture of how the frontend will create pages that allow the user to add, remove, and modify Satellites associated with the system.
+This module describes the architecture of how the frontend will create pages that allow the user to add, remove, and modify Satellites associated with the system. 
+
+
 
 \subsubsection{Program Flow}
 
-The Satellite Management front end consists of the Satellite Management page. 
-This page leads to a set-up wizard for syncing new Satellites with the Server. 
-The wizard walks the user through instructions 
+
 
 % Insert a flow chart here with a high-level look
 %  at the states this part of the system goes through
 
 \subsubsection{Data Flow}
 
+This module receives the basic format for the web pages from the back end Satellite module. 
+It then fills in the additional and page-specific content. 
+
+
+
 % Describe where data goes and comes from in this subsubsection
 % Flow charts are encouraged
 
-\subsubsection{UML Diagrams}
+%\subsubsection{UML Diagrams}
 
 % Any diagrams that can describe the system design
 %  Such as inheritance and actors
@@ -32,7 +37,7 @@ The wizard walks the user through instructions
 %  on ways to work around them.
 % Elaborate on why the problem exists
 
-\subsubsection{Sub-modules 1}
+%\subsubsection{Sub-modules 1}
 
 % This is a second subsubsection of modules,
 %  and should consists of this module broken 
