I think this section is complete except for the Potential Problems section. Not sure what to put here yet...
git-svn-id: svn://dunari.cis.vtc.edu/POWER@132 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Satellite.tex
+++ b/Documents/Design/Software/Backend-Satellite.tex
@@ -9,7 +9,7 @@ This module describes the architecture of how the back end will manage features 
 
 The Satellite Management back end is in control of maintaining the information in the database pertaining to Satellites. 
 The back end will also generate the framework for the web pages. 
-It will pass the basic form of the Satellite Management page to the front end to be filled in by the display. 
+It will pass the basic form of the Satellite Management page to the front end to be filled in with additional formatting. 
 
 \subsubsection{Program Flow}
 
