--- a/Documents/Design/Software/Backend-Devices.tex
+++ b/Documents/Design/Software/Backend-Devices.tex
@@ -5,48 +5,29 @@
 
 \subsubsection{Description}
 
-This module describes the architecture of how the back end will manage features related to Device Management.
+This module describes the architecture of how the back end will manage features related to Device Management. 
 
 The Device Management back end will be in charge of maintaining the database with information pertaining to the Devices. 
 The back end will also generate the framework for the web pages. 
-It will send the basic format of the Device Management page to the front end to be filled in with additional formatting.
+It will send the basic format of the Device Management page to the front end to be filled in with additional formatting. 
  
 
 \subsubsection{Program Flow}
 
-The user will be presented with the option to add, edit, or disable a device. 
-Adding a device allows the user to name the new device and associate it with a specific Satellite. 
-Editing a device allows the user to change the Satellite associated with the device. 
-The user will not have the option to edit the name of the device once it has been created in order to maintain consistant data with each device. 
-Disabling a device will remove it from 
-
-% Insert a flow chart here with a high-level look
-%  at the states this part of the system goes through
+The back end Device Management module will be activated by a request from the front end Device Management. 
+This module will complete the request by adding information to the SQL database or querying said database for specific data. 
 
 \subsubsection{Data Flow}
 
+The Data Flow will behave in much the same manner as the Program Flow. 
 The back end Device Management module will receive data from the Device Management front end via the REST API. 
 This includes data that needs to be changed in the database, and requests for data. 
 This module will then modify or query the database as needed, 
 returning the requested data or a confirmation of modification to the front end through the REST API. 
-
-
-% Describe where data goes and comes from in this subsubsection
-% Flow charts are encouraged
-
-%\subsubsection{UML Diagrams}
-
-% Any diagrams that can describe the system design
-%  Such as inheritance and actors
+The data for the basic format of the web pages will also be sent from the back end to the front end through the REST API. 
 
 %\subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them.
 % Elaborate on why the problem exists
-
-%\subsubsection{Sub-modules 1}
-
-% This is a second subsubsection of modules,
-%  and should consists of this module broken 
-%  down further into components
