--- a/Documents/Design/Hardware/Satellite-Hardware.tex
+++ b/Documents/Design/Hardware/Satellite-Hardware.tex
@@ -5,6 +5,9 @@
 % Describe hardware setup for our
 % XBee modules
 
+For the communication between the Server and the Satellites,
+we will be using the Xbee Series 2 Radio Modules.
+
 \subsubsection{XBee Series 2 Radio Modules}
 
 % Might want to mention we want series 2 for
